--- a/mediawikisyntax.mediawiki
+++ b/mediawikisyntax.mediawiki
@@ -1,3 +1,120 @@
-= Title =
+= MediaWiki markup language =
 
-Body
+== Text formatting markup ==
+
+=== Paragraphs, sections ===
+
+Normal text directly appears in the output. To start a new paragraph,
+leave a blank line between the two text segments:
+
+<pre>
+First paragraph, 
+can have multiple lines.
+
+The second paragraph
+</pre>
+
+Sections can be created by surrounding titles with = characters,
+and putting them in separate lines. The section's level depends
+on the number of = characters. The following example shows
+how to create multiple, nested sections:
+
+<pre>
+= Section 1 =
+
+== Section 1.1 ==
+
+== Section 1.2 ==
+
+=== Section 1.2.1 ===
+
+==== Section 1.2.1.1 ====
+
+==== Section 1.2.1.2 ====
+
+=== Section 1.2.2 ===
+
+= Section 2 =
+
+...
+</pre>
+
+----
+
+It is possible to put a horizontal line with the following syntax:
+<pre>----</pre>
+
+=== Simple text formatting ===
+
+Use the following syntax for formatting the text:
+ 
+* ''Italic text'': &apos;&apos;italic text&apos;&apos;
+* '''Bold text''': &apos;&apos;&apos;bold text&apos;&apos;&apos;
+* '''''Bold italic text''''': &apos;&apos;&apos;&apos;&apos;bold italic text&apos;&apos;&apos;&apos;&apos;
+
+=== Links ===
+
+=== Lists ===
+
+''Bullet lists'' can be written by putting one ore more asterix (*) at
+the beginning of a line. Multiple asterisks means ''nesting'':
+
+<pre>
+* First item
+** A sub item
+** Other sub item
+*** One more deeper
+* Second item
+* ...
+</pre>
+
+produces the following output:
+
+* First item
+** A sub item
+** Other sub item
+*** One more deeper
+* Second item
+* ...
+
+Similarly, using the hash character (#) creates ''numbered lists'':
+
+<pre>
+# First item
+## A sub item
+## Other sub item
+### One more deeper
+# Second item
+# ...
+</pre>
+
+will give the following output:
+
+# First item
+## A sub item
+## Other sub item
+### One more deeper
+# Second item
+# ...
+
+It is possible to create ''definition lists'':
+
+<pre>
+;item 1
+: definition 1
+;item 2
+: definition 2-1
+: definition 2-2
+</pre>
+
+produces
+
+;item 1
+: definition 1
+;item 2
+: definition 2-1
+: definition 2-2
+
+=== Tables ===
+
+=== Images ===
