--- a/start.MediaWiki
+++ b/start.MediaWiki
@@ -23,10 +23,8 @@ This software uses [http://mercurial.selenic.com/ Mercurial] for storing and syn
 The following two tasks require external tools in the current version:
 
 === Installing Mercurial ===
-The current version cannot install Mercurial so it is a prerequisite for running ''Distributed Documentor''. It is also requid to have '''hg.exe''' in the ''PATH'' so the application can execute it without configuration.
+The current version cannot install Mercurial so it is a prerequisite for running ''Distributed Documentor''. The applications [SettingsDialog settings dialog] can be used to set the path to the ''mercurial binary''.
 
 === Setting up remote access for the repositories ===
 This version has no support for hosting the repositories to make them remotely accessible. 
-
-[TemporaryPage]
 
