--- a/doc/start.MediaWiki
+++ b/doc/start.MediaWiki
@@ -3,7 +3,7 @@
 [WhatsNew What's new in version 03/04/2012?]
 
 == Goals ==
-''Distributed Documentor'' is a desktop application enabling its users to create software documentation using [http://en.wikipedia.org/wiki/Lightweight_markup_language lightweight markup languages] in multiple geographical locations simultaneously, with the ability to correctly synchronize the changes made at these distinct locations.
+''Distributed Documentor'' is a <span style="color:#6666ff">desktop</span> application enabling its users to create software documentation using [http://en.wikipedia.org/wiki/Lightweight_markup_language lightweight markup languages] in multiple geographical locations simultaneously, with the ability to correctly synchronize the changes made at these distinct locations.
 
 The documentation can be [ExportingDocumentation exported] any time to set of help formats at any location.
 
